--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.34.0",
     "hono": "^4.11.9",
+    "irctc-connect": "^2.1.3",
     "lucide-react": "^0.564.0",
     "next": "16.1.6",
     "next-themes": "^0.4.6",
+    "pg": "^8.18.0",
     "postgres": "^3.4.8",
     "react": "19.2.3",
     "react-day-picker": "^9.13.2",
@@ -37,6 +39,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "drizzle-kit": "^0.31.9",
